ghc/tests/typecheck/should_fail/tcfail050.hs
module ShouldFail where

f x = B x
